--- a/css/report.css
+++ b/css/report.css
@@ -15,7 +15,20 @@
     border-top: 1px solid #4F6228;
     vertical-align: top;
 }
-
+.budgetbox{
+    text-align: left;
+    width: 100%;
+    padding: 0px;
+    border-spacing: 0px;
+    font-size: 10px !important;
+    border-width: 0px; 
+}
+.budgetbox th{
+    
+    text-align: left;
+    background-color:rgb(146, 208, 80);
+    border-right: 1px solid #4F6228;
+}
 .border_bottom_thick {
     border-bottom: 2px solid #D8D8D8 !important;
 }
@@ -193,3 +206,20 @@
     border-bottom: 10px solid  #92D050;
 }
 
+
+.paperContainer {
+    vertical-align: top;
+    border-left: 1px solid #E8E8E8;
+    border-right: 1px solid #E8E8E8;
+    border-bottom: 1px solid #DBDBDB;
+    border-top: 1px solid #F5F5F5;
+    padding: 3px;
+    font-size: 14px;
+    width: 100% !important;
+    background-color: #fff;
+    margin-top: 10px !important;
+    margin:auto; 
+    -moz-box-shadow:0px 8px 10px 10px #f5f5f5; 
+    -webkit-box-shadow:0px 8px 10px 10px #f5f5f5; 
+    box-shadow:0px 8px 10px 10px #f5f5f5;
+}
